--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
   <body >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script
-  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-pzjw8f+ua7Kw1TIq0v8FqS9fONgZb0TqtnbA8lB6P5I6H0WjXNe+sdXlCrS86y+H"
-  crossorigin="anonymous"
-></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
   </body>
